# upstream_config_util

./: .gitignore  PySimpleGUI.py  README.md  build.bat  main.py  make_cfg_tool_exe.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_exe.yml
cfg_util/: __init__.py  decorators.py  layout.py  tables.py  ui.py
cfg_util/boards/: __init__.py
cfg_util/commands/: __init__.py
cfg_util/configure/: __init__.py
cfg_util/general/: __init__.py
cfg_util/record/: __init__.py  func.py  manager.py  ui.py
cfg_util/scan/: __init__.py
logger/: __init__.py
settings/: __init__.py  settings.toml
upstream_config_util/: __init__.py  decorators.py  imgs.py  layout.py  tables.py  ui.py
upstream_config_util/boards/: __init__.py  report.py
upstream_config_util/commands/: __init__.py
upstream_config_util/configure/: __init__.py
upstream_config_util/general/: __init__.py
upstream_config_util/record/: __init__.py  func.py  layout.py  manager.py  pdf.py  ui.py
upstream_config_util/scan/: __init__.py
