[tool.poetry]
name = "upstream_config_util"
version = "1.1.2"
description = ""
authors = ["UpstreamData <brett@upstreamdata.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.60.5"
matplotlib = "^3.7.1"
reportlab = "^3.6.13"
svglib = "^1.5.1"
pyasic = "^0.35.0"
pyperclip = "^1.8.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
cx-Freeze = "^6.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
