[tool.poetry]
name = "upstream_config_util"
version = "1.2.2"
description = ""
authors = ["UpstreamData <brett@upstreamdata.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.2"
reportlab = "4.2.5"
svglib = "^1.5.1"
pyasic = "0.64.13"
pyperclip = "^1.9.0"
freesimplegui = "^5.1.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
cx-Freeze = "^6.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
