[tool.poetry]
name = "upstream_config_util"
version = "1.2.4rc3"
description = ""
authors = ["UpstreamData <brett@upstreamdata.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.9.2"
reportlab = "4.2.5"
svglib = "^1.5.1"
pyasic = "0.64.13"
pyperclip = "^1.9.0"
freesimplegui = "^5.1.1"
toml = "^0.10.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
cx-Freeze = "7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.cxfreeze]
executables = [
    {script = "main.py", base="gui", icon="icon.ico"}
]

[tool.cxfreeze.build_exe]
include_files=["settings/settings.toml", "README.md"]
include_msvcr=true